Added citations for SR

--- a/Interim-Report/main.tex
+++ b/Interim-Report/main.tex
@@ -74,7 +74,8 @@ Since MRI, like US (ultrasound), is a non-invasive procedure that doesn’t use 
 
 There are no known side effects associated with using MRI, however it is currently recommended to wait until the 17th or 18th WG (week of gestation) before performing MRI. This is partially a precautionary measure but also before then the size of the fetus and amount of movement limits the usefulness of the scan.
 
-\subsubsection{Super Resolution}
+\subsubsection{Super Resolution\cite{superresolution1}\cite{superresolution2}}
+Hi
 
 
 \chapter{Project Plan}
