Volume Rendering is in.

--- a/Interim-Report/bibliography.bib
+++ b/Interim-Report/bibliography.bib
@@ -86,3 +86,10 @@
     address     = "http://web.stanford.edu/class/ee104/shannonpaper.pdf",
     note        = "Last Accessed: 30/01/2015"
 }
+
+@MISC {nvidia:volumerendering,
+    author       = "Nvidia",
+    title        = "Chapter 39. Volume Rendering Techniques",
+    howpublished = "http://http.developer.nvidia.com/GPUGems/gpugems\_ch39.html",
+    note         = "{Last Accessed: 30/01/15}"
+}
