Surface extraction in. Didn't use some of the references....

--- a/Interim-Report/bibliography.bib
+++ b/Interim-Report/bibliography.bib
@@ -93,3 +93,12 @@
     howpublished = "http://http.developer.nvidia.com/GPUGems/gpugems\_ch39.html",
     note         = "{Last Accessed: 30/01/15}"
 }
+
+@TECHREPORT {surfacevsvolumerendering,
+    author      = "Ramin Shahidi",
+    title       = "Surface Rendering versus Volume Rendering in Medical Imaging: Techniques and Applications",
+    institution = "Stanford University Medical Center",
+    year        = "1996",
+    address     = "http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=568151",
+    note        = "Last Accessed: 30/01/15"
+}
