Visualisation stuff in. No pictures.

--- a/Interim-Report/bibliography.bib
+++ b/Interim-Report/bibliography.bib
@@ -102,3 +102,19 @@
     address     = "http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=568151",
     note        = "Last Accessed: 30/01/15"
 }
+
+@TECHREPORT {attractiveflicker,
+    author      = "Manuela Waldner and Mathieu Le Muzic and Matthias Bernhard and Werner Purgathofer and Ivan Viola",
+    title       = "Attractive Flicker - Guiding Attention in Dynamic Narrative Visualizations",
+    institution = "Vienna University of Technology and VRVis Research Center",
+    year        = "2014",
+    address     = "http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6876019\&contentType=Early+Access+Articles"
+}
+
+@TECHREPORT {labelling,
+    author      = "S. Oeltze-Jafra and B. Preim",
+    title       = "Survey of Labeling Techniques in Medical Visualizations",
+    institution = "University of Magdeburg",
+    year        = "2014",
+    address     = "http://www.vismd.de/lib/exe/fetch.php?media=files:labelling:oeltze\_2014\_vcbm.pdf"
+}
