--- a/Interim-Report/main.tex
+++ b/Interim-Report/main.tex
@@ -239,6 +239,76 @@ There are some constraints associated with using surface extraction for volume v
 
 For this project surface extraction could prove useful for generating a rough overview of the scan being worked on that uncertainty data or other information can be overlayed on. If however it is not possible to get a good enough extraction from the data then a reference image, also known as an imposter, could be used instead.
 
+subsection{Uncertainty Visualisation}
+Uncertainty visualisation tackles the problem of trying to represent the ambiguity or uncertainty in a some data or a model when visualising it.
+
+Most data visualisation techniques implicitly assume that all of the data being used is perfect and because of this create visualisations that are misleading or appear to represent with great precision a model when in fact the underlying data cannot be that sure.
+
+One of the reason that a lot of visualisations leave this kind of information out is that it can be quite to visualise the uncertainty. When creating a visualisation there is an inherent restriction on the dimensions that you can exploit to represent information.
+
+Consider the general problem of creating a visualisation from an n-dimensional dataset and suppose that we are creating a 3D visualisation. In this case we need to somehow map each n-dimensional data point to a ‘dimension’ in our visualisation. The dimensions we can control are space (x, y, z), time and colour (RGB/HSV). The art of data visualisation is to find an intuitive mapping to these and to creatively reuse these dimensions to illustrate different features.
+
+The issue when it comes to uncertainty visualisation is that most of these dimensions have already been used up with the data itself and so finding intuitive representations for uncertainty is difficult.
+
+To get an idea of what is possible with visualisation techniques here are some examples that have been applied successfully in the past.
+
+\begin{verbatim}
+<Error Bars Image>
+\end{verbatim}
+
+Error bars are possibly the simplest form of uncertainty visualisation possible and are commonly found on graphs. They make use of one spatial dimension. An extension of this technique is the box and whisker plot which adds some idea of variance and range.
+
+\begin{verbatim}
+<Heatmap Image>
+\end{verbatim}
+
+Colour can be very effective at communicating information. A heatmap uses a range of colours to represent intensity data in a certain range.
+
+\begin{verbatim}
+<Transparency Image>
+\end{verbatim}
+
+Transparency can also be used though care must be taken to not over complicate the visualisation.
+
+\begin{verbatim}
+<Frames of Animation>
+\end{verbatim}
+
+Time is a useful dimension to exploit but is more suited to some visualisations than others. When combined with a different dimension, such as colour, an animation can be produced that can draw the viewers attention.
+
+In particular a team at the Vienna University of Technology have written a paper on attractive flicker which is designed to draw the viewers attention to a particular point in a cluttered scene\cite{attractiveflicker}.
+
+\begin{verbatim}
+<image>
+\end{verbatim}
+
+This technique could be useful for illustrating the area of greatest uncertainty or highlighting the scan plane.
+
+\begin{verbatim}
+<Combination>
+\end{verbatim}
+
+A combination of many dimensions may well be appropriate.
+
+When visualising uncertainty in particular you must consider which extreme you would like to draw attention to. A lot of uncertainty visualisations draw larger attention to high uncertainty areas, for example brighter colours on a heatmap or larger error bars, but it may be the case that the viewer is interested in areas of high certainty as this is what they can draw conclusions from.
+The uncertainty that we will be dealing with in this project is in fact a vector quantity, composed of three values. 
+
+\begin{enumerate}
+	\item (over)sampling - confidence in our sampling resolution
+	\item registration - confidence in registration
+	\item bias/intensity - confidence in the intensity.
+\end{enumerate}
+
+This extra dimensionality will make visualising the uncertainty harder than it would otherwise be. One aspect that is worth investigating is to see whether the three scalar values can be combined to create one representative value or whether they are better visualised individually.
+
+Another aspect of this project will be proposing (and visualising) the next scan plane. This, and potentially other parts of the project, will involve labelling the data in some way. Work on choosing a good labelling system has been done previously and there are a number of different approaches that can be taken\cite{labelling}.
+
+\begin{verbatim}
+<labelling diagram>
+\end{verbatim}
+
+If the need for labelling comes up in my project it will be worth investigating these techniques.
+
 \chapter{Project Plan}
 
 \chapter{Evaluation}
